--- a/AJS_TP_3/index.html
+++ b/AJS_TP_3/index.html
@@ -27,7 +27,7 @@
         <p>Afin d'organiser le code, ces classes seront regroupées dans un module.</p>
 
         <h3>Les classes de formes géométriques</h3>
-        <p>Ces formes pourront être des rectangles, des elipses ou des polygones. Toutes les formes hériteront d'une même classe générique <em>Shape</em>.</p>
+        <p>Ces formes pourront être des rectangles, des ellipses ou des polygones. Toutes les formes hériteront d'une même classe générique <em>Shape</em>.</p>
         <p>Les formes géométriques s'inscrivent toutes dans une <em>BoundingBox</em> et ont une <em>Color</em>. </p>
         <p>Afin d'organiser le code, les classes de formes seront regroupées dans un module. Ce module n'exportera pas la classe générique.</p>
 
