--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <li><a href="./AJS_TP_1/index.html">TP Advanced JS #1 : Modules</a></li>	
 <li><a href="./AJS_TP_2/index.html">TP Advanced JS #2 : Promises</a></li>	
 <li><a href="./AJS_TP_3/index.html">TP Advanced JS #3 : Classes</a></li>
+<li><a href="./AJS_TP_4/index.html">TP Advanced JS #3 : Exceptions Handling & WebWorkers</a></li>
 </ul>
 	
 	<h2>Node JS</h2>
