preciser que le module renvoie une promise

--- a/AJS_TP_4/index.html
+++ b/AJS_TP_4/index.html
@@ -65,8 +65,8 @@
 
   <section>
     <h2>Advanced JS (ES6): Exceptions handling</h2>
-    Dans ce premier exercice, on vous demande d'utiliser le mystérieux module <code>fetch2numbers</code> qui renvoie un tableaux 
-    de 2 entiers relatifs. Ce module peut déclencher 2 types d'erreurs étendant la classe <code>Error</code> 
+    Dans ce premier exercice, on vous demande d'utiliser le mystérieux module <code>Fetch2numbers</code>. Ce module expose une unique fonction, <code>fetch2numbers</code> qui renvoie un tableaux 
+    de 2 entiers relatifs dans une <code>Promise</code>. Ce module peut déclencher 2 types d'erreurs étendant la classe <code>Error</code> 
     et  dont on donne les valeurs de la propriété <code>name</code>:
     <ul>
       <li><code>Fetch2NumbersRequestError</code> : cette erreur est liée au dialogue HTTP lancé par le module.</li>
