--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <li><a href="./JS_TP_3/index.html">TP JS #3 : Asynchronism with the <code>Fetch</code> API</a></li>
 <li><a href="./JS_TP_4/index.html">TP JS #4 : Web Workers</a></li>
 <li><a href="./JS_TP_5/index.html">TP JS #5 : Local Storage, towards Progressive Web App</a></li>
+<li><a href="./JS_TP_6/index.html">TP JS #6 : IndexedDb</a></li>
 </ul>
 
 	<h1>Server Side</h1>
